Use API_KEY generated on clojars web site and saved into a github secrets.

--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -24,5 +24,4 @@ jobs:
           file: target/carbonite-1.6.0.jar
           pom-file: pom.xml
           username: ${{ secrets.CLOJARS_USERNAME }}
-          password: ${{ secrets.CLOJARS_PASSWORD }}
-
+          password: ${{ secrets.CLOJARS_API_KEY }}
