--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Create Jars
         run: lein uberjar
       - name: Deploy to Clojars
-        uses: sverigesradio/deploy-clojars-action@v1.0.0
+        uses: clojars/lein-deploy@v2
         with:
           file: target/carbonite-1.6.0.jar
           pom-file: pom.xml
